# Tchi5

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
